--- a/perritos.html
+++ b/perritos.html
@@ -11,8 +11,16 @@
     <div class="container">
         <div class="titulo">
             <h1>
-                Los perritos mas lindos del mundo
+                Los perritos más lindos del mundo
             </h1>
+        </div>
+
+        <div class="perros1">
+            <img class="perro2" src="img/perro2.jpg">
+        </div>
+
+        <div class="perros1">
+            <img class="perro2" src="img/perro3.jpg">
         </div>
     </div>
     
