--- a/gatitos.html
+++ b/gatitos.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FotoLog de Animales: Perritos</title>
+    <title>FotoLog de Animales: Gatitos</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
-
         <header>
             <!-- Barra de navegacion -->
             <div>
@@ -18,13 +17,13 @@
                         <li>
                             <a href="index.html">
                                 <img class ="navbar" src="img/home.png">
-                            </a> 
+                            </a>                           
                         </li>
 
                         <li>
-                            <a href="gatitos.html">
-                                <img class ="navbar" src="img/cat.png">
-                            </a>                           
+                            <a href="perritos.html">
+                                <img class ="navbar" src="img/dog.png">
+                            </a>
                         </li>
 
                         <li>
@@ -36,20 +35,20 @@
                 </nav>
             </div>
         </header>
-
         <hr>
+
         <div class="titulo">
             <h1>
-                Los perritos más lindos del mundo
+                Los gatitos más tiernos del mundo
             </h1>
         </div>
 
         <div class="perros1">
-            <img class="perro2" src="img/perro2.jpg">
+            <img class="perro2" src="img/gatos2.jpg">
         </div>
 
         <div class="perros1">
-            <img class="perro2" src="img/perro3.jpg">
+            <img class="perro2" src="img/gatos4.jpg">
         </div>
 
         <footer>
