--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,6 +9,35 @@
 </head>
 <body>
     <div class="container">
+        <header>
+            <!-- Barra de navegacion -->
+            <div>
+                <nav>
+                    <ul>
+                        <li>
+                            <a href="perritos.html">
+                                <img class ="navbar" src="img/dog.png">
+                            </a>
+                        </li>
+
+                        <li>
+                            <a href="gatitos.html">
+                                <img class ="navbar" src="img/cat.png">
+                            </a>                           
+                        </li>
+
+                        <li>
+                            <a href="conejitos.html">
+                                <img class ="navbar" src="img/rabbit.png">
+                            </a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </header>
+
+        <hr>
+        
         <div class="titulo">
             <h1>
                 Mi fotoLog de animales locos 
@@ -24,14 +53,21 @@
                 <img class="perro" src="img/perro1.jpg">
             </a>
 
-            <a href="">
+            <a href="gatitos.html">
                 <img class="gato" src="img/gato1.jpg">
             </a>
 
-            <a href="">
+            <a href="conejitos.html">
                 <img class="conejo" src="img/conejo1.jpg">
             </a>
         </div>
+
+        <footer>
+            <hr>
+            <div class="titulo">
+                <h3>Creado con ❤️ por Cecilia</h3>
+            </div>
+        </footer>
     </div>
 </body>
 </html>
